# goproWhereWhen

./: .gitignore  CMakeLists.txt  LICENSE  README.md  exporters.cpp  exporters.h  goproWhereWhen.cpp  goprometa.cpp  goprometa.h  opts.cpp  opts.h  utils.cpp
getopt/: getopt.hpp
gpmf-parser/: GPMF_mp4reader.c  GPMF_mp4reader.h
xmlwriter/: xmlwriter.h
